src/actions.h

void on_dm_pin_message_clicked(GtkWidget *widget, gpointer user_data);
void perform_admin_verify(const gchar *username, gboolean verify);
void perform_admin_delete_user(const gchar *username);
void perform_admin_delete_post(const gchar *post_id);
void show_tweet(const gchar *tweet_id);
gboolean mark_notification_read(const gchar *notification_id);
gboolean perform_post_tweet(const gchar *content, const gchar *reply_to_id, GList *attachments);
void on_note_button_clicked(GtkWidget *widget, gpointer user_data);
gboolean perform_reaction(const gchar *tweet_id, const gchar *emoji);
gboolean perform_edit_tweet(const gchar *tweet_id, const gchar *new_content);
gboolean perform_delete_tweet(const gchar *tweet_id);
gchar* fetch_tweet_edit_history_text(const gchar *tweet_id);
gchar* fetch_tweet_reactions_text(const gchar *tweet_id);
GList* fetch_emojis(void);
void free_emojis(GList *emojis);
void on_report_tweet_clicked(GtkWidget *widget, gpointer user_data);
void on_translate_tweet_clicked(GtkWidget *widget, gpointer user_data);
gboolean perform_toggle_pin_tweet(const gchar *tweet_id, gboolean pin);
gboolean perform_poll_vote(const gchar *tweet_id, const gchar *option_id);
gboolean perform_poll_multi_vote(const gchar *tweet_id, JsonNode *answers, gchar **message_out);
void free_poll_option(gpointer data);
gchar* perform_media_upload(const gchar *file_path);
gboolean perform_join_community(const gchar *community_id);
gboolean perform_leave_community(const gchar *community_id);
void free_community(gpointer data);
void free_communities(GList *communities);
void update_interaction_cache(const gchar *tweet_id, gboolean liked, gboolean retweeted, gboolean bookmarked);
void on_mute_conversation_clicked(GtkWidget *widget, gpointer user_data);