src/ui_components.h

GtkWidget* create_tweet_widget(struct Tweet *tweet);
GtkWidget* create_tweet_widget_full(struct Tweet *tweet, const gchar *op_username);
void populate_tweet_list(GtkListBox *list_box, GList *tweets);
void append_tweets_to_list(GtkListBox *list_box, GList *tweets);
GtkWidget* create_user_widget(struct Profile *user);
void populate_user_list(GtkListBox *list_box, GList *users);
void populate_notification_list(GtkListBox *list_box, GList *notifications);
void append_notifications_to_list(GtkListBox *list_box, GList *notifications);
void populate_conversation_list(GtkListBox *list_box, GList *conversations);
void populate_message_list(GtkListBox *list_box, GList *messages);
void populate_community_list(GtkListBox *list_box, GList *communities);