src/api.zig


pub extern fn load_avatar(image: [*c]c.GtkWidget, url: [*c]const c.gchar, size: c_int) void;
pub extern fn on_author_clicked(button: [*c]c.GtkButton, user_data: c.gpointer) void;
pub extern fn detect_mime_type(file_path: [*c]const c.gchar) [*c]c.gchar;
pub extern fn build_reply_banner_text(username: [*c]const c.gchar) [*c]c.gchar;
pub extern fn build_account_label_text(name: [*c]const c.gchar, username: [*c]const c.gchar) [*c]c.gchar;
pub extern fn free_attachment_payload(data: c.gpointer) void;
pub extern fn build_attachment_list(file_url: [*c]const c.gchar, file_type: [*c]const c.gchar) [*c]c.GList;
pub extern fn fetch_url(url: [*c]const c.gchar, chunk: [*c]types.MemoryStruct, post_data: [*c]const c.gchar, method: [*c]const c.gchar) c.gboolean;
pub extern fn fetch_emojis() [*c]c.GList;
pub extern fn free_emojis(emojis: [*c]c.GList) void;
pub extern fn fetch_tweet_edit_history_text(tweet_id: [*c]const c.gchar) [*c]c.gchar;
pub extern fn fetch_tweet_reactions_text(tweet_id: [*c]const c.gchar) [*c]c.gchar;
pub extern fn show_tweet(tweet_id: [*c]const c.gchar) void;
pub extern fn perform_post_tweet(content: [*c]const c.gchar, reply_to_id: [*c]const c.gchar, attachments: [*c]c.GList) c.gboolean;
pub extern fn perform_quote_tweet(content: [*c]const c.gchar, quote_tweet_id: [*c]const c.gchar) c.gboolean;
pub extern fn perform_edit_tweet(tweet_id: [*c]const c.gchar, new_content: [*c]const c.gchar) c.gboolean;
pub extern fn perform_delete_tweet(tweet_id: [*c]const c.gchar) c.gboolean;
pub extern fn perform_toggle_pin_tweet(tweet_id: [*c]const c.gchar, pin: c.gboolean) c.gboolean;
pub extern fn perform_toggle_highlight_tweet(tweet_id: [*c]const c.gchar, highlighted: c.gboolean) c.gboolean;
pub extern fn perform_tweet_reply_restriction(tweet_id: [*c]const c.gchar, value: [*c]const c.gchar) c.gboolean;
pub extern fn perform_tweet_outline(tweet_id: [*c]const c.gchar, value: [*c]const c.gchar) c.gboolean;
pub extern fn perform_reaction(tweet_id: [*c]const c.gchar, emoji: [*c]const c.gchar) c.gboolean;
pub extern fn perform_poll_vote(tweet_id: [*c]const c.gchar, option_id: [*c]const c.gchar) c.gboolean;
pub extern fn perform_poll_multi_vote(tweet_id: [*c]const c.gchar, answers: ?*c.JsonNode, message_out: [*c][*c]c.gchar) c.gboolean;
pub extern fn perform_media_upload(file_path: [*c]const c.gchar) [*c]c.gchar;
pub extern fn perform_admin_verify(username: [*c]const c.gchar, verify: c.gboolean) void;
pub extern fn perform_admin_delete_user(username: [*c]const c.gchar) void;
pub extern fn perform_admin_delete_post(post_id: [*c]const c.gchar) void;
pub extern fn perform_join_community(community_id: [*c]const c.gchar) c.gboolean;
pub extern fn perform_leave_community(community_id: [*c]const c.gchar) c.gboolean;
pub extern fn perform_dm_mark_read(conversation_id: [*c]const c.gchar) c.gboolean;
pub extern fn perform_dm_message_reaction(message_id: [*c]const c.gchar, emoji: [*c]const c.gchar) c.gboolean;
pub extern fn perform_dm_message_edit(message_id: [*c]const c.gchar, content: [*c]const c.gchar) c.gboolean;
pub extern fn perform_dm_message_delete(message_id: [*c]const c.gchar) c.gboolean;
pub extern fn mark_notification_read(notification_id: [*c]const c.gchar) c.gboolean;
pub extern fn update_interaction_cache(tweet_id: [*c]const c.gchar, liked: c.gboolean, retweeted: c.gboolean, bookmarked: c.gboolean) void;
pub extern fn on_note_button_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_report_tweet_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_translate_tweet_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_pin_message_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_mute_conversation_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn zig_gtk_menu_popup_at_widget(menu: [*c]c.GtkWidget, widget: [*c]c.GtkWidget) void;
pub extern fn zig_gtk_menu_popup_at_pointer(menu: [*c]c.GtkWidget, event: c.gpointer) void;

pub extern fn fetch_url_with_auth_token(url: [*c]const c.gchar, chunk: [*c]types.MemoryStruct, post_data: [*c]const c.gchar, method: [*c]const c.gchar, auth_token_override: [*c]const c.gchar) c.gboolean;
pub extern fn fetch_url_with_file(url: [*c]const c.gchar, chunk: [*c]types.MemoryStruct, file_path: [*c]const c.gchar, field_name: [*c]const c.gchar) c.gboolean;
pub extern fn fetch_url_with_file_auth_token(url: [*c]const c.gchar, chunk: [*c]types.MemoryStruct, file_path: [*c]const c.gchar, field_name: [*c]const c.gchar, auth_token_override: [*c]const c.gchar) c.gboolean;

pub extern fn get_config_path() [*c]c.gchar;
pub extern fn save_session(token: [*c]const c.gchar, username: [*c]const c.gchar, is_admin: c.gboolean) void;
pub extern fn clear_session() void;
pub extern fn load_session() void;
pub extern fn is_valid_username(username: [*c]const c.gchar) c.gboolean;

pub extern fn parse_tweets(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_tweet_details(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn tweets_response_is_empty(json_data: [*c]const c.gchar) c.gboolean;
pub extern fn parse_profile(json_data: [*c]const c.gchar) [*c]types.Profile;
pub extern fn parse_profile_replies(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn profile_replies_response_is_empty(json_data: [*c]const c.gchar) c.gboolean;
pub extern fn parse_users(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_notifications(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_conversations(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_messages(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_conversation_details(json_data: [*c]const c.gchar) [*c]types.Conversation;
pub extern fn parse_community_details(json_data: [*c]const c.gchar) [*c]types.Community;
pub extern fn parse_admin_stats(json_data: [*c]const c.gchar) [*c]c.gchar;
pub extern fn parse_admin_users(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_admin_posts(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_user_me_response(json_data: [*c]const c.gchar, is_admin_out: [*c]c.gboolean) c.gboolean;
pub extern fn parse_upload_response(json_data: [*c]const c.gchar) [*c]c.gchar;
pub extern fn parse_login_response(json_data: [*c]const c.gchar, token_out: [*c][*c]c.gchar, username_out: [*c][*c]c.gchar, is_admin_out: [*c]c.gboolean) c.gboolean;
pub extern fn parse_communities(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn parse_lists_response(json_data: [*c]const c.gchar, owned_out: [*c][*c]c.GList, followed_out: [*c][*c]c.GList) c.gboolean;
pub extern fn parse_list_details_response(json_data: [*c]const c.gchar) [*c]types.TweetaList;
pub extern fn parse_list_followers_response(json_data: [*c]const c.gchar) [*c]c.GList;
pub extern fn construct_tweet_payload(content: [*c]const c.gchar, reply_to_id: [*c]const c.gchar, attachments: [*c]c.GList) [*c]c.gchar;
pub extern fn free_tweet(data: c.gpointer) void;
pub extern fn free_tweets(tweets: [*c]c.GList) void;
pub extern fn free_user(data: c.gpointer) void;
pub extern fn free_users(users: [*c]c.GList) void;
pub extern fn free_notification(data: c.gpointer) void;
pub extern fn free_notifications(notifications: [*c]c.GList) void;
pub extern fn free_conversation(data: c.gpointer) void;
pub extern fn free_conversations(conversations: [*c]c.GList) void;
pub extern fn free_messages(messages: [*c]c.GList) void;
pub extern fn free_community(data: c.gpointer) void;
pub extern fn free_communities(communities: [*c]c.GList) void;
pub extern fn free_poll_option(data: c.gpointer) void;
pub extern fn free_tweeta_list(data: c.gpointer) void;
pub extern fn free_tweeta_lists(lists: [*c]c.GList) void;

pub extern fn create_tweet_widget(tweet: [*c]types.Tweet) [*c]c.GtkWidget;
pub extern fn create_tweet_widget_full(tweet: [*c]types.Tweet, op_username: [*c]const c.gchar) [*c]c.GtkWidget;
pub extern fn populate_tweet_list(list_box: [*c]c.GtkListBox, tweets: [*c]c.GList) void;
pub extern fn append_tweets_to_list(list_box: [*c]c.GtkListBox, tweets: [*c]c.GList) void;
pub extern fn create_user_widget(user: [*c]types.Profile) [*c]c.GtkWidget;
pub extern fn populate_user_list(list_box: [*c]c.GtkListBox, users: [*c]c.GList) void;
pub extern fn append_notifications_to_list(list_box: [*c]c.GtkListBox, notifications: [*c]c.GList) void;
pub extern fn populate_notification_list(list_box: [*c]c.GtkListBox, notifications: [*c]c.GList) void;
pub extern fn populate_conversation_list(list_box: [*c]c.GtkListBox, conversations: [*c]c.GList) void;
pub extern fn populate_message_list(list_box: [*c]c.GtkListBox, messages: [*c]c.GList) void;
pub extern fn populate_community_list(list_box: [*c]c.GtkListBox, communities: [*c]c.GList) void;

pub extern fn webauthn_fido2_is_enabled() c.gboolean;
pub extern fn webauthn_fido2_login(response_json_out: [*c][*c]c.gchar, error_out: [*c][*c]c.gchar) c.gboolean;
pub extern fn webauthn_fido2_register(username: [*c]const c.gchar, response_json_out: [*c][*c]c.gchar, error_out: [*c][*c]c.gchar) c.gboolean;
pub extern fn solve_challenge(challenge_json: [*c]const c.gchar, token: [*c]const c.gchar) [*c]c.gchar;

pub extern fn p2p_crypto_init() c.gboolean;
pub extern fn p2p_generate_keypair(username: [*c]const c.gchar, email: [*c]const c.gchar, passphrase: [*c]const c.gchar) [*c]c.gchar;
pub extern fn p2p_export_public_key(fingerprint: [*c]const c.gchar) [*c]c.gchar;
pub extern fn p2p_import_public_key(armored_key: [*c]const c.gchar, fingerprint: [*c]const c.gchar) c.gboolean;
pub extern fn p2p_get_local_fingerprint() [*c]const c.gchar;
pub extern fn p2p_encrypt_message(plaintext: [*c]const c.gchar, recipient_fingerprint: [*c]const c.gchar) [*c]c.gchar;
pub extern fn p2p_send_message(recipient_username: [*c]const c.gchar, plaintext: [*c]const c.gchar, recipient_fingerprint: [*c]const c.gchar) c.gboolean;
pub extern fn p2p_network_init(config: [*c]types.P2PTransportConfig) c.gboolean;
